Successfully imported all Teams from VexDb

--- a/Download/App.config
+++ b/Download/App.config
@@ -9,7 +9,8 @@
     <!-- For local execution, the value can be set either in this config file or through environment variables -->
     <add name="AzureWebJobsDashboard" connectionString="" />
     <add name="AzureWebJobsStorage" connectionString="" />
-  <add name="CoreContextEntities" connectionString="metadata=res://*/Models.CoreModel.csdl|res://*/Models.CoreModel.ssdl|res://*/Models.CoreModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\Elliot\OneDrive\Development\vs\vtn\ApiApp\ApiApp\App_Data\CoreContext.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="CoreConnection" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\Elliot\OneDrive\Development\vs\vtn\ApiApp\ApiApp\App_Data\CoreContext.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
@@ -34,6 +35,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.6.4.0" newVersion="5.6.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework.MappingAPI" publicKeyToken="7ee2e825d201459e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.1.0.9" newVersion="6.1.0.9" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
